# boxagnts

./: .gitignore  Cargo.toml  README.md  README.zh.md  claurst-README.md
.github/workflows/: ci.yml  release.yml
app/dashboard-web/: index.html  site-nav.html
app/dashboard-web/assets/: AgentsPage-CPQjC4Ee.js  AgentsPage-CfqTkYvo.js  AgentsPage-ChNwkyPT.js  AgentsPage-Cro4BIt_.js  AgentsPage-GJSgnSd7.css  AgentsPage-rgPR5bjz.js  ChatPage-BCAXiHPr.css  ChatPage-BmgDhI1m.js  ChatPage-CCZaTI8B.js  ChatPage-Cnktm_64.css  ChatPage-HUV4quaB.js  ChatPage-Inv32tie.css  ChatPage-Z2LiO0qL.js  CronsPage-BZF9HC6a.js  CronsPage-CJSYv8Bs.js  CronsPage-CkQKWDo_.js  CronsPage-Cm0z54Jh.css  CronsPage-D1csH-xB.css  CronsPage-D5CiQYL4.js  CronsPage-UC978E30.js  FilePage-BBl8GwbM.js  FilePage-Cc_sGEnW.js  FilePage-Cyw5lzyK.js  FilePage-D96Ontlb.js  FilePage-DiXuUVle.css  HomePage-C9PrVOaD.js  HomePage-DEoilpp2.css  McpPage-Bum7OHpF.js  McpPage-COyZ_UzK.js  McpPage-CXT05cNi.js  McpPage-CyaVxL3f.js  McpPage-D_FzbXlS.js  McpPage-DjyTiLVM.css  SettingsAgentsMdPage-CBXqjmAe.js  SettingsAgentsMdPage-C_Ap1eCy.js  SettingsAgentsMdPage-GykKLAYY.js  SettingsModelPage-ByzplPj1.js  SettingsModelPage-CeJwAtjg.js  SettingsModelPage-DqKlgKLH.js  SettingsModelPage-Dz0foC62.js  (+48 more)
app/extensions/services/: boxed_static_server_component.wasm
app/extensions/skills/code-review/: SKILL.md
app/extensions/skills/css-refactor-advisor/: SKILL.md
app/extensions/skills/current-weather/: SKILL.md
app/extensions/skills/front-component-generator/: SKILL.md
app/extensions/skills/weather-forecast/: SKILL.md
app/extensions/tools/: file-edit-component.wasm  file-glob-component.wasm  file-read-component.wasm  file-write-component.wasm  web-fetch-component.wasm
boxagnts-dashboard-web/: index.html  package-lock.json  package.json  site-nav.html  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
boxagnts-dashboard-web/src/: App.vue  main.ts
boxagnts-dashboard-web/src/api/: api.ts  apiAdapter.ts  fileApi.ts  index.ts
boxagnts-dashboard-web/src/components/: AppSidebar.vue  CodeEditor.vue  FileTreeItem.vue  FolderTreeItem.vue  ImagePreview.vue  RightSidebar.vue
boxagnts-dashboard-web/src/composables/: useChatMessages.ts  useChatScroll.ts  useChatSession.ts  useMarkdownRender.ts
boxagnts-dashboard-web/src/router/: index.ts
boxagnts-dashboard-web/src/stores/: agents.ts  app.ts  baseCrud.ts  crons.ts  files.ts  mcp.ts  sessions.ts  settings.ts  sites.ts  skills.ts  tools.ts  usage.ts
boxagnts-dashboard-web/src/types/: index.ts
boxagnts-dashboard-web/src/utils/: cron.ts
boxagnts-dashboard-web/src/views/: AgentsPage.vue  ChatPage.vue  CronsPage.vue  FilePage.vue  HomePage.vue  McpPage.vue  SettingsAgentsMdPage.vue  SettingsModelPage.vue  SettingsPage.vue  SettingsPromptPage.vue  SettingsSecurityPage.vue  SitesPage.vue  SkillsPage.vue  ToolsPage.vue  UsagePage.vue
boxagnts/api/: Cargo.toml
boxagnts/api/src/: cch.rs  codex_adapter.rs  error_handling.rs  lib.rs  model_registry.rs  provider.rs  provider_error.rs  provider_types.rs  registry.rs  stream_parser.rs
boxagnts/api/src/providers/: anthropic.rs  azure.rs  bedrock.rs  codex.rs  cohere.rs  copilot.rs  free.rs  google.rs  message_normalization.rs  minimax-v2.rs  minimax.rs  mod.rs  openai.rs  openai_compat.rs  openai_compat_providers.rs
boxagnts/api/src/transformers/: anthropic.rs  openai_chat.rs
boxagnts/assets/models.dev/: README.md
boxagnts/core/: Cargo.toml
boxagnts/core/src/: constants.rs  cost.rs  effort.rs  error.rs  feature_gates.rs  lib.rs  mcp_templates.rs  provider_id.rs  system_prompt.rs  types.rs
boxagnts/gateway/: Cargo.toml
boxagnts/gateway/src/: lib.rs  system_prompt.txt
boxagnts/gateway/src/api/: chat.rs  chat_session.rs  file.rs  fs_events.rs  mcp.rs  mod.rs  project.rs  skill.rs  tool.rs
boxagnts/gateway/src/config/: app_state.rs  mod.rs  model.rs  provider_util.rs
boxagnts/gateway/src/cron/: app_state.rs  job.rs  mod.rs  model.rs  scheduler.rs  store.rs
boxagnts/gateway/src/site/: app_state.rs  mod.rs  model.rs  store.rs
boxagnts/mcp/: Cargo.toml
boxagnts/mcp/src/: connection_manager.rs  lib.rs  oauth.rs  rmcp_backend.rs
boxagnts/query/: Cargo.toml
boxagnts/query/src/: compact.rs  lib.rs  managed_orchestrator.rs  query.rs  query.rs.bak
boxagnts/server/: Cargo.toml
boxagnts/server/src/: main.rs  web_server.rs
boxagnts/server/src/dashboard/: chat.rs  chat_ws.rs  config.rs  cron.rs  file.rs  file_ws.rs  mod.rs  provider.rs  site.rs  skill.rs  tool.rs  ws.rs
boxagnts/server/src/sites/: mod.rs
boxagnts/tools/: Cargo.toml
boxagnts/tools-manager/: Cargo.toml
boxagnts/tools-manager/src/: lib.rs
boxagnts/tools/src/: lib.rs  tool.rs  tool_search.rs
boxagnts/tools/src/agent/: mod.rs
boxagnts/tools/src/ask_user/: mod.rs
boxagnts/tools/src/brief/: mod.rs
boxagnts/tools/src/mcp/: mcp_auth_tool.rs  mcp_resources.rs  mod.rs
boxagnts/tools/src/plan_mode/: enter_plan_mode.rs  exit_plan_mode.rs  mod.rs
boxagnts/tools/src/skill/: mod.rs  skill_tool.rs
boxagnts/tools/src/sleep/: mod.rs
boxagnts/wasm-sandbox/: Cargo.toml
boxagnts/wasm-sandbox/src/: compiler.rs  lib.rs  run.rs
boxagnts/wasm-sandbox/src/extension/: mod.rs  net.rs
boxagnts/wasm-sandbox/src/extension/expressions/: mod.rs  provider.rs  template.rs
boxagnts/wasm-sandbox/src/extension/outbound_networking_config/: allowed_hosts.rs  blocked_networks.rs  mod.rs
boxagnts/wasm-sandbox/src/wasmtime_cli/: commands.rs  common.rs  mod.rs
boxagnts/wasm-sandbox/src/wasmtime_cli/commands/: run.rs  serve.rs
boxagnts/wasm-sandbox/src/wasmtime_http/: handler.rs  host.rs  mod.rs  option.rs  output.rs  state.rs
boxagnts/wasm-tools/: Cargo.toml
boxagnts/wasm-tools/src/: lib.rs  wasm_tool.rs
boxagnts/workspace/: Cargo.toml
boxagnts/workspace/src/: agents_md.rs  auth_store.rs  config.rs  context.rs  history.rs  lib.rs  oauth.rs  oauth_config.rs  output_styles.rs  permissions.rs
scripts/: release.ps1  release.sh
