[workspace]
resolver = "2"
members = [
    "boxagnts/*",]
exclude = [
    "boxagnts/assets"
]

[workspace.dependencies]

## Workspace crates
## boxagnts
boxagnts-core = { path = "boxagnts/core" }
boxagnts-api = { path = "boxagnts/api" }
boxagnts-wasm-sandbox = { path = "boxagnts/wasm-sandbox" }
boxagnts-wasm-tools = { path = "boxagnts/wasm-tools" }
boxagnts-tools = { path = "boxagnts/tools" }
boxagnts-tools-manager = { path = "boxagnts/tools-manager" }
boxagnts-workspace = { path = "boxagnts/workspace" }
boxagnts-gateway = { path = "boxagnts/gateway" }
boxagnts-mcp = { path = "boxagnts/mcp" }
boxagnts-query = { path = "boxagnts/query" }



## Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

## HTTP
reqwest = { version = "0.12", features = ["json", "stream", "native-tls", "multipart"], default-features = false }
reqwest-eventsource = "0.6"

## Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

## CLI
clap = { version = "4", features = ["derive", "env", "string"] }




## Error handling
anyhow = "1"
thiserror = "2"

## Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

## Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
walkdir = "2"
tempfile = "3"
dirs = "5"
which = "7"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
indexmap = { version = "2", features = ["serde"] }
bytes = "1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"
url = "2"
mime = "0.3"
urlencoding = "2"
open = "5"
qrcode = "0.14"
rusqlite = { version = "0.32", features = ["bundled"] }
icy_sixel = "0.5"
image = { version = "0.25", features = ["png", "jpeg"] }
log = "0.4"
env_logger = "0.11"


## Text processing
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html"] }
unicode-width = "0.2"
unicode-segmentation = "1"


## Async channels
tokio-util = { version = "0.7", features = ["codec", "rt"] }

## WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

## JSON Schema
schemars = { version = "0.8", features = ["derive"] }

futures-util = "0.3"


