[workspace]
resolver = "2"
members = [
    "boxagnts/*",]
exclude = [
    "boxagnts/assets"
]

[workspace.dependencies]

## Workspace crates
## boxagnts
boxagnts-core = { path = "boxagnts/core" }
boxagnts-api = { path = "boxagnts/api" }
boxagnts-wasm-sandbox = { path = "boxagnts/wasm-sandbox" }
boxagnts-wasm-tools = { path = "boxagnts/wasm-tools" }
boxagnts-tools = { path = "boxagnts/tools" }
boxagnts-tools-manager = { path = "boxagnts/tools-manager" }
boxagnts-workspace = { path = "boxagnts/workspace" }
boxagnts-gateway = { path = "boxagnts/gateway" }
boxagnts-mcp = { path = "boxagnts/mcp" }
boxagnts-query = { path = "boxagnts/query" }



## Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

## HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }
reqwest-eventsource = "0.6"

## Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

## CLI
clap = { version = "4", features = ["derive", "env", "string"] }




## Error handling
anyhow = "1"
thiserror = "2"

## Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

## Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
walkdir = "2"
tempfile = "3"
dirs = "5"
which = "7"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
indexmap = { version = "2", features = ["serde"] }
bytes = "1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"
url = "2"
mime = "0.3"
urlencoding = "2"
open = "5"
qrcode = "0.14"
rusqlite = { version = "0.32", features = ["bundled"] }
icy_sixel = "0.5"
image = { version = "0.25", features = ["png", "jpeg"] }
log = "0.4"
env_logger = "0.11"


## Text processing
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html"] }
unicode-width = "0.2"
unicode-segmentation = "1"


## Async channels
tokio-util = { version = "0.7", features = ["codec", "rt"] }

## WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

## JSON Schema
schemars = { version = "0.8", features = ["derive"] }

futures-util = "0.3"

[profile.release]

##
## 0: no optimizations
## 1: basic optimizations
## 2: some optimizations
## 3: all optimizations
## "s": optimize for binary size
## "z": optimize for binary size, but also turn off loop vectorization.
opt-level = 'z'

##
## 0, false, or "none": no debug info at all, default for release
## "line-directives-only": line info directives only. For the nvptx* targets this enables profiling. For other use cases, line-tables-only is the better, more compatible choice.
## "line-tables-only": line tables only. Generates the minimal amount of debug info for backtraces with filename/line number info, but not anything else, i.e. no variable or function parameter info.
## 1 or "limited": debug info without type or variable-level information. Generates more detailed module-level info than line-tables-only.
## 2, true, or "full": full debug info, default for dev
debug = false

##
## "none", false, strip = false is equivalent to strip = "none" and disables strip completely
## "debuginfo",
## "symbols", true, strip = true is equivalent to strip = "symbols"
strip = "symbols"

##
## true or "fat": Performs “fat” LTO which attempts to perform optimizations across all crates within the dependency graph.
## "thin": Performs “thin” LTO. This is similar to “fat”, but takes substantially less time to run while still achieving performance gains similar to “fat”.
## false: Performs “thin local LTO” which performs “thin” LTO on the local crate only across its codegen units. No LTO is performed if codegen units is 1 or opt-level is 0.
## off": Disables LTO.
lto = "thin"

##
## "unwind": Unwind the stack upon panic.
## "abort": Terminate the process upon panic.
panic = "abort"

##
codegen-units = 1

