[package]
name = "boxagnts-api"
version = "0.5.0"
edition = "2024"

[dependencies]
boxagnts-core = { workspace = true }
boxagnts-workspace = { workspace = true }

tokio = { workspace = true }


reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }


hmac = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh64"] }