[package]
name = "boxagnts-core"
version = "0.6.0"
edition = "2024"

[dependencies]

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
