[package]
name = "boxagnts-gateway"
version = "0.5.0"
edition = "2024"

[lib]


[dependencies]
boxagnts-tools = { workspace = true }
boxagnts-tools-manager = { workspace = true }
boxagnts-workspace  = { workspace = true }
boxagnts-mcp = { workspace = true }
boxagnts-query = { workspace = true }
boxagnts-core = { workspace = true }
boxagnts-api = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }

tokio-cron-scheduler = { version = "0.15" }
