[package]
name = "boxagnts-mcp"
version = "0.2.0"
edition = "2024"

[dependencies]
boxagnts-core = { workspace = true }
boxagnts-workspace = { workspace = true }


tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
chrono = { workspace = true }
open = { workspace = true }
urlencoding = { workspace = true }

rmcp = { version = "1.4.0", default-features = false, features = ["client", "auth", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest"] }