[package]
name = "boxagnts-workspace"
version = "0.7.0"
edition = "2024"





[dependencies]

boxagnts-core = { workspace = true }


tokio = { workspace = true }
chrono = { workspace = true }
serde  = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
glob = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }